--- a/operator/install/kubernetes/chart/stackgres-operator/templates/validation-webhook-configuration.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/validation-webhook-configuration.yaml
@@ -2,12 +2,12 @@
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: {{ .Values.operatorName }}-cluster-validator
+  name: {{ .Values.operatorName }}-cluster
   {{- if .Values.namespace.create }}
   namespace: {{ .Values.operatorNamespace }}
   {{- end }}
 webhooks:
-  - name: {{ .Values.operatorName }}.{{ .Values.operatorNamespace }}.svc
+  - name: cluster.{{ .Values.operatorName }}.{{ .Values.operatorNamespace }}
     sideEffects: None
     rules:
       - operations: ["CREATE", "UPDATE", "DELETE"]
@@ -25,12 +25,12 @@ webhooks:
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: {{ .Values.operatorName }}-pgconfig-validator
+  name: {{ .Values.operatorName }}-pgconfig
   {{- if .Values.namespace.create }}
   namespace: {{ .Values.operatorNamespace }}
   {{- end }}
 webhooks:
-  - name: {{ .Values.operatorName }}.{{ .Values.operatorNamespace }}.svc
+  - name: pgconfig.{{ .Values.operatorName }}.{{ .Values.operatorNamespace }}
     sideEffects: None
     rules:
       - operations: ["CREATE", "UPDATE", "DELETE"]
