Update CRD Validation
- Add syntatic validation to CRD params

Signed-off-by: Kadaffy Talavera <kadaffy@ongres.com>

--- a/operator/install/kubernetes/chart/stackgres-cluster/templates/cluster-cr.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/templates/cluster-cr.yaml
@@ -14,7 +14,7 @@ spec:
   sidecars:
   {{- if .Values.sidecar.pooling }}
   - connection-pooling
-  {{ end }}
+  {{- end }}
   {{- if .Values.sidecar.util }}
   - postgres-util
   {{- end }}
