--- a/operator/install/kubernetes/chart/stackgres-operator/templates/profile-crd.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/profile-crd.yaml
@@ -27,6 +27,8 @@ spec:
           properties:
             cpu:
               type: string
+              pattern: '^[1-9]+[,.]?[0-9]*([\/][0-9]+[,.]?[0-9]*)*(m)'
             memory:
               type: string
+              pattern: '^[0-9]+[,.]?[0-9]*([\/][0-9]+[,.]?[0-9]*)*(MiB|GiB)'
           required: ["cpu","memory"]
