--- a/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
@@ -87,6 +87,8 @@ rules:
 - apiGroups: ["monitoring.coreos.com"]
   resources:
   - prometheus
+  - prometheuses
+  - podmonitors
   verbs:
   - list
   - get
