fix: checkstyle errors

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/validation-webhook-configuration.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/validation-webhook-configuration.yaml
@@ -10,7 +10,7 @@ webhooks:
   - name: cluster.{{ .Values.operatorName }}.{{ .Values.operatorNamespace }}
     sideEffects: None
     rules:
-      - operations: ["CREATE", "UPDATE", "DELETE"]
+      - operations: ["CREATE", "UPDATE"]
         apiGroups: ["stackgres.io"]
         apiVersions: ["*"]
         resources: ["sgclusters"]
