--- a/operator/install/kubernetes/chart/stackgres-cluster/values.yaml
+++ b/operator/install/kubernetes/chart/stackgres-cluster/values.yaml
@@ -12,7 +12,7 @@ cluster:
   pgconfig: postgresconf
   poolingconfig: pgbouncerconf
   profile: size-xs
-  volumesize: 5GiB
+  volumesize: 5Gi
   storageclass: standard
 
 sidecar:
