--- a/operator/install/kubernetes/chart/stackgres-operator/templates/pgconfig-crd.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/pgconfig-crd.yaml
@@ -30,6 +30,8 @@ spec:
               enum:
               - "11"
               - "12"
+              description: "PostgreSQL configuration version"
             postgresql.conf:
               type: object
+              description: "List of PostgreSQL configuration parameters with their values"
           required: ["pg_version","postgresql.conf"]
