--- a/operator/install/kubernetes/chart/stackgres-operator/templates/profile-crd.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/profile-crd.yaml
@@ -28,7 +28,9 @@ spec:
             cpu:
               type: string
               pattern: '^[1-9][0-9]*[m]?$'
+              description: "CPU amount to be used"
             memory:
               type: string
               pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi)$'
+              description: "Memory size to be used"
           required: ["cpu","memory"]
