--- a/operator/install/kubernetes/chart/stackgres-operator/templates/init-job.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/init-job.yaml
@@ -25,18 +25,11 @@ spec:
           - "/bin/bash"
           - "-ecx"
           - |
-            function init() {
-              if kubectl get csr {{ .Values.operatorName }}
-              then
-                kubectl delete csr {{ .Values.operatorName }}
-              fi
-              if kubectl get secret {{ .Values.operatorName }}-init
-              then
-                kubectl delete secret {{ .Values.operatorName }}-init
-              fi
-              kubectl delete validatingwebhookconfiguration {{ .Values.operatorName }}-cluster-validator || true
-              kubectl delete validatingwebhookconfiguration {{ .Values.operatorName }}-pgconfig-validator || true
-              cat << EOF > /tmp/csr.conf
+            kubectl delete csr --ignore-not-found {{ .Values.operatorName }}
+            kubectl delete secret --ignore-not-found {{ .Values.operatorName }}-init
+            kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Values.operatorName }}-cluster
+            kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Values.operatorName }}-pgconfig
+            cat << EOF > /tmp/csr.conf
             [req]
             req_extensions = v3_req
             distinguished_name = req_distinguished_name
@@ -52,13 +45,13 @@ spec:
             DNS.3 = {{ .Values.operatorName }}.{{ .Values.operatorNamespace }}.svc
             DNS.4 = {{ .Values.operatorName }}.{{ .Values.operatorNamespace }}.svc.cluster.local
             EOF
-              
-              openssl req -new -nodes -text -keyout /tmp/root.key \
-                  -subj "/CN={{ .Values.operatorName }}.{{ .Values.operatorNamespace }}.svc" \
-                  -out /tmp/server.csr \
-                  -config /tmp/csr.conf
-              
-              cat << EOF | kubectl create -f -
+            
+            openssl req -new -nodes -text -keyout /tmp/root.key \
+                -subj "/CN={{ .Values.operatorName }}.{{ .Values.operatorNamespace }}.svc" \
+                -out /tmp/server.csr \
+                -config /tmp/csr.conf
+            
+            cat << EOF | kubectl create -f -
             apiVersion: certificates.k8s.io/v1beta1
             kind: CertificateSigningRequest
             metadata:
@@ -73,39 +66,32 @@ spec:
               - key encipherment
               - server auth
             EOF
-              
-              if ! kubectl get csr {{ .Values.operatorName }} -o yaml|grep -q '^    type: Approved$'
-              then
-                {{- if .Values.cert.autoapprove }}
-                kubectl certificate approve {{ .Values.operatorName }}
-                {{- end }}
-                echo -n "Waiting for CSR approval..."
-                until kubectl get csr {{ .Values.operatorName }} -o yaml|grep -q '^    type: Approved$'
-                do
-                  echo -n .
-                  sleep 5
-                done
-                echo approved
-              fi
-              KEY="$(cat /tmp/root.key | base64 | tr -d '\n')"
-              CRT="$(kubectl get csr \
-                {{ .Values.operatorName }} \
-                -o jsonpath='{.status.certificate}')"
-              
-              {{- if .Values.validator.create }}
-              cat << EOF | kubectl create -f -
+            
+            if ! kubectl get csr {{ .Values.operatorName }} -o yaml|grep -q '^    type: Approved$'
+            then
+              {{- if .Values.cert.autoapprove }}
+              kubectl certificate approve {{ .Values.operatorName }}
+              {{- end }}
+              echo -n "Waiting for CSR approval..."
+              until kubectl get csr {{ .Values.operatorName }} -o yaml|grep -q '^    type: Approved$'
+              do
+                echo -n .
+                sleep 5
+              done
+              echo approved
+            fi
+            KEY="$(cat /tmp/root.key | base64 | tr -d '\n')"
+            CRT="$(kubectl get csr \
+              {{ .Values.operatorName }} \
+              -o jsonpath='{.status.certificate}')"
+            
+            {{- if .Values.validator.create }}
+            cat << EOF | kubectl create -f -
             {{- include (print $.Template.BasePath "/validation-webhook-configuration.yaml") (dict "Values" (merge dict .Values (dict "cert" (dict "crt" "${CRT}" "key" "${KEY}")))) | splitList "\n" | join "\n            " }}
             EOF
-              {{ end }}
-              
-              cat << EOF | kubectl create -f -
+            {{ end }}
+            cat << EOF | kubectl create -f -
             {{- include (print $.Template.BasePath "/secret.yaml") (dict "Values" (merge dict .Values (dict "cert" (dict "crt" "${CRT}" "key" "${KEY}")))) | splitList "\n" | join "\n            " }}
             EOF
-            }
-            
-            until init
-            do
-              sleep 5
-            done
       restartPolicy: OnFailure
 {{ end }}
