--- a/operator/install/kubernetes/chart/stackgres-operator/values.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/values.yaml
@@ -33,3 +33,8 @@ cert:
 
 prometheus:
   allowAutobind: true
+
+grafana:
+  url: "http://localhost:3000/d/000000039/postgresql-database?orgId=1&refresh=10s&from=1571132619682&to=1571154219683&var-interval=%24__auto_interval_interval&var-namespace=&var-release=&var-instance=10.244.0.2%3A9153&var-datname=All&var-mode=All"
+  token: "eyJrIjoiczFwRFVhcDBoR3ZRNUQwRWYzOEFUQUJ0bTNjM0tGNWkiLCJuIjoic3RhY2tncmVzIiwiaWQiOjF9"
+  httpHost: "prometheus-operator-grafana.default.svc"
