feat: Enabling the resource creation discovery, so if we need to create custom resources we can creates services for that

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/deployment.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/deployment.yaml
@@ -35,6 +35,7 @@ spec:
           CRD_GROUP: {{ .Values.group }}
           CRD_VERSION: {{ .Values.crd.version }}
           CONTAINER_BUILD: {{ .Values.containerBuild }}
+          PROMETHEUS_AUTOBIND: {{ .Values.allowAutobind }}
         ports:
         - containerPort: 8080
           name: "http"
