feat: embed grafana to stackgres Web UI

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/service.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     app: {{ .Values.operatorName }}
   ports:
-    - name: operator
+    - name: https
       protocol: TCP
       port: 443
       targetPort: 443
