--- a/operator/install/kubernetes/chart/stackgres-operator/templates/nginx-configmap.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/nginx-configmap.yaml
@@ -16,20 +16,19 @@ data:
         ssl_certificate         /etc/operator/certs/server.crt;
         ssl_certificate_key     /etc/operator/certs/root.key;
         
-        {{- if .Values.grafana }}
         {{- if and .Values.grafana.url .Values.grafana.token .Values.grafana.httpHost }}
         location /grafana {
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Server $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            return 302 "$scheme://$http_host{{ regexReplaceAll "^https?://[^/]+(/.*)$" .Values.grafana.url "${1}" }}&theme=light&kiosk=tv";
+            add_header Content-Type text/plain;
+            return 200 "{{ regexReplaceAll "^https?://[^/]+(/.*)$" .Values.grafana.url "${1}" }}";
         }
         {{ end }}
-        {{ end }}
         
-        location /web {
+        location ~ ^/$ {
+            return 302 $scheme://$http_host/stackgres;
+        }
+        
+        location ~ ^/stackgres {
+            proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Host $host;
@@ -46,24 +45,12 @@ data:
             proxy_set_header X-Forwarded-Server $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             index index.html index.htm;
-            {{- if .Values.grafana }}
             {{- if and .Values.grafana.url .Values.grafana.token .Values.grafana.httpHost }}
-            if ($http_RedirectToGrafana != "false") {
-                set $test "redirect_to_grafana";
-            }
-            set $authorization "${http_Authorization}";
-            if ($test = "redirect_to_grafana") {
-                set $authorization 'Bearer {{ .Values.grafana.token }}';
-            }
-            proxy_set_header Authorization "${authorization}";
-            if ($test = "redirect_to_grafana") {
-                proxy_pass "{{ default "http" .Values.grafana.scheme }}://{{ regexReplaceAll "/" .Values.grafana.httpHost "" }}";
-            }
+            proxy_set_header Authorization "Bearer {{ .Values.grafana.token }}";
+            proxy_pass "{{ default "http" .Values.grafana.scheme }}://{{ regexReplaceAll "/" .Values.grafana.httpHost "" }}";
+            {{ else }}
+            return 404;
             {{ end }}
-            {{ end }}
-            if ($test != "redirect_to_grafana") {
-                proxy_pass http://localhost:8080;
-            }
         }
     }
 
