--- a/operator/install/kubernetes/chart/stackgres-operator/templates/validation-webhook-configuration.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/validation-webhook-configuration.yaml
@@ -19,7 +19,7 @@ webhooks:
       service:
         namespace: {{ .Values.operatorNamespace }}
         name: {{ .Values.operatorName }}
-        path: '/validation/cluster'
+        path: '/stackgres/validation/cluster'
       caBundle: {{ .Values.cert.crt }}
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
@@ -33,7 +33,7 @@ webhooks:
   - name: pgconfig.{{ .Values.operatorName }}.{{ .Values.operatorNamespace }}
     sideEffects: None
     rules:
-      - operations: ["CREATE", "UPDATE", "DELETE"]
+      - operations: ["CREATE", "UPDATE"]
         apiGroups: ["stackgres.io"]
         apiVersions: ["*"]
         resources: ["sgpgconfigs"]
@@ -42,6 +42,6 @@ webhooks:
       service:
         namespace: {{ .Values.operatorNamespace }}
         name: {{ .Values.operatorName }}
-        path: '/validation/pgconfig'
+        path: '/stackgres/validation/pgconfig'
       caBundle: {{ .Values.cert.crt }}
 {{ end }}
