fix: fixed typo in CRD check

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-crd.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-crd.yaml
@@ -27,7 +27,7 @@ spec:
             properties:
               instances:
                 type: integer
-                minimun: 1
+                minimum: 1
                 description: "Number of instances to be created"
               pg_version:
                 type: string
