--- a/operator/install/kubernetes/chart/stackgres-operator/templates/deployment.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
           - name: CONTAINER_BUILD
             value: {{ .Values.containerBuild }}
           - name: PROMETHEUS_AUTOBIND
-            value: {{ .Values.prometheus.allowAutobind }}
+            value: '{{ .Values.prometheus.allowAutobind }}'
         ports:
         - containerPort: 8080
           name: "http"
