--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.stackgres</groupId>
   <artifactId>stackgres-parent</artifactId>
-  <version>0.7-SNAPSHOT</version>
+  <version>0.7</version>
   <packaging>pom</packaging>
   <name>Parent POM</name>
 
@@ -42,8 +42,6 @@
     <java.version>1.8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <!-- Containers build version -->
-    <container.build>1-dev</container.build>
     <!-- Dependencies versions -->
     <quarkus.version>0.22.0</quarkus.version>
     <jool.version>0.9.14</jool.version>
