--- a/sidecars/pom.xml
+++ b/sidecars/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.stackgres</groupId>
     <artifactId>stackgres-parent</artifactId>
-    <version>0.7-SNAPSHOT</version>
+    <version>0.7</version>
   </parent>
 
   <artifactId>sidecars</artifactId>
