--- a/operator/pom.xml
+++ b/operator/pom.xml
@@ -125,6 +125,9 @@
           <name>native</name>
         </property>
       </activation>
+      <properties>
+        <native-image.disable-reports>true</native-image.disable-reports>
+      </properties>
       <build>
         <plugins>
           <plugin>
@@ -165,10 +168,6 @@
     </profile>
     <profile>
       <id>integration</id>
-      <properties>
-        <quarkus.http.ssl.certificate.file>src/test/resources/certs/server.crt</quarkus.http.ssl.certificate.file>
-        <quarkus.http.ssl.certificate.key-file>src/test/resources/certs/server-key.pem</quarkus.http.ssl.certificate.key-file>
-      </properties>
       <build>
         <plugins>
           <plugin>
@@ -278,17 +277,32 @@
                 <id>build-image</id>
                 <phase>package</phase>
                 <goals>
+                  <goal>build</goal>
                   <goal>stop</goal>
                   <goal>start</goal>
                 </goals>
                 <configuration>
                   <images>
                     <image>
-                      <alias>build-image</alias>
-                      <name>ongres/builder</name>
+                      <alias>image-builder</alias>
+                      <name>ongres-jvm-builder</name>
+                      <build>
+                        <from>ongres/builder</from>
+                        <assembly>
+                          <targetDir>/operator</targetDir>
+                          <inline>
+                            <fileSets>
+                              <fileSet>
+                                <directory>${project.basedir}</directory>
+                                <outputDirectory>/</outputDirectory>
+                              </fileSet>
+                            </fileSets>
+                          </inline>
+                        </assembly>
+                      </build>
                       <run>
-                        <namingStrategy>alias</namingStrategy>
                         <privileged>true</privileged>
+                        <workingDir>/</workingDir>
                         <entrypoint>
                           <arg>/bin/sh</arg>
                           <arg>-ex</arg>
@@ -299,7 +313,7 @@
                           <exit>0</exit>
                         </wait>
                         <log>
-                          <prefix>build-image|</prefix>
+                          <prefix>image-builder|</prefix>
                           <date>default</date>
                         </log>
                         <env>
@@ -308,44 +322,8 @@
                         </env>
                         <volumes>
                           <bind>
-                            <volume>${project.basedir}:/operator:ro</volume>
                             <volume>/var/lib/containers</volume>
                             <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
-                          </bind>
-                        </volumes>
-                        <autoRemove>true</autoRemove>
-                      </run>
-                    </image>
-                    <image>
-                      <alias>kind-load</alias>
-                      <name>stackgres/it</name>
-                      <run>
-                        <namingStrategy>alias</namingStrategy>
-                        <entrypoint>
-                          <arg>/bin/sh</arg>
-                          <arg>-exc</arg>
-                          <arg>
-                        IMAGE_NAME="${IMAGE_NAME:-"stackgres/operator:development-jvm"}"
-                        CONTAINER_NAME="$(docker inspect -f '{{.Name}}' "$(hostname)"|cut -d '/' -f 2|sed 's/^kind-load/kind/')"
-                        kind load docker-image --name "$CONTAINER_NAME" "$IMAGE_NAME" || true
-                          </arg>
-                        </entrypoint>
-                        <wait>
-                          <time>300000</time>
-                          <exit>0</exit>
-                        </wait>
-                        <log>
-                          <prefix>kind-load|</prefix>
-                          <date>default</date>
-                        </log>
-                        <env>
-                          <IMAGE_NAME>${env.IMAGE_NAME}</IMAGE_NAME>
-                          <DOCKER_HOST>${env.DOCKER_HOST}</DOCKER_HOST>
-                        </env>
-                        <volumes>
-                          <bind>
-                            <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
-                            <volume>/var/lib/docker:/var/lib/docker:ro</volume>
                           </bind>
                         </volumes>
                         <autoRemove>true</autoRemove>
@@ -402,16 +380,30 @@
                 <phase>package</phase>
                 <goals>
                   <goal>stop</goal>
+                  <goal>build</goal>
                   <goal>start</goal>
                 </goals>
                 <configuration>
                   <images>
                     <image>
-                      <alias>build-image</alias>
-                      <name>ongres/builder</name>
+                      <name>ongres-native-builder</name>
+                      <build>
+                        <from>ongres/builder</from>
+                        <assembly>
+                          <targetDir>/operator</targetDir>
+                          <inline>
+                            <fileSets>
+                              <fileSet>
+                                <directory>${project.basedir}</directory>
+                                <outputDirectory>/</outputDirectory>
+                              </fileSet>
+                            </fileSets>
+                          </inline>
+                        </assembly>
+                      </build>
                       <run>
-                        <namingStrategy>alias</namingStrategy>
                         <privileged>true</privileged>
+                        <workingDir>/</workingDir>
                         <entrypoint>
                           <arg>/bin/sh</arg>
                           <arg>-ex</arg>
@@ -422,7 +414,7 @@
                           <exit>0</exit>
                         </wait>
                         <log>
-                          <prefix>build-image|</prefix>
+                          <prefix>image-builder|</prefix>
                           <date>default</date>
                         </log>
                         <env>
@@ -431,7 +423,6 @@
                         </env>
                         <volumes>
                           <bind>
-                            <volume>${project.basedir}:/operator:ro</volume>
                             <volume>/var/lib/containers</volume>
                             <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
                           </bind>
@@ -439,16 +430,101 @@
                         <autoRemove>true</autoRemove>
                       </run>
                     </image>
+                  </images>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>kind-load-image-jvm</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>${docker-maven-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>kind-load-image</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>stop</goal>
+                  <goal>start</goal>
+                </goals>
+                <configuration>
+                  <images>
                     <image>
                       <alias>kind-load</alias>
                       <name>stackgres/it</name>
                       <run>
-                        <namingStrategy>alias</namingStrategy>
                         <entrypoint>
                           <arg>/bin/sh</arg>
                           <arg>-exc</arg>
                           <arg>
                         IMAGE_NAME="${IMAGE_NAME:-"stackgres/operator:development-jvm"}"
+                        CONTAINER_NAME="$(docker inspect -f '{{.Name}}' "$(hostname)"|cut -d '/' -f 2|sed 's/^kind-load/kind/')"
+                        kind load docker-image --name "$CONTAINER_NAME" "$IMAGE_NAME" || true
+                          </arg>
+                        </entrypoint>
+                        <wait>
+                          <time>300000</time>
+                          <exit>0</exit>
+                        </wait>
+                        <log>
+                          <prefix>kind-load|</prefix>
+                          <date>default</date>
+                        </log>
+                        <env>
+                          <IMAGE_NAME>${env.IMAGE_NAME}</IMAGE_NAME>
+                          <DOCKER_HOST>${env.DOCKER_HOST}</DOCKER_HOST>
+                        </env>
+                        <volumes>
+                          <bind>
+                            <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
+                            <volume>/var/lib/docker:/var/lib/docker:ro</volume>
+                          </bind>
+                        </volumes>
+                        <autoRemove>true</autoRemove>
+                      </run>
+                    </image>
+                  </images>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>kind-load-image-native</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>${docker-maven-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>kind-load-image</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>stop</goal>
+                  <goal>start</goal>
+                </goals>
+                <configuration>
+                  <images>
+                    <image>
+                      <alias>kind-load</alias>
+                      <name>stackgres/it</name>
+                      <run>
+                        <entrypoint>
+                          <arg>/bin/sh</arg>
+                          <arg>-exc</arg>
+                          <arg>
+                        IMAGE_NAME="${IMAGE_NAME:-"stackgres/operator:development"}"
                         CONTAINER_NAME="$(docker inspect -f '{{.Name}}' "$(hostname)"|cut -d '/' -f 2|sed 's/^kind-load/kind/')"
                         kind load docker-image --name "$CONTAINER_NAME" "$IMAGE_NAME" || true
                           </arg>
