--- a/operator/pom.xml
+++ b/operator/pom.xml
@@ -27,7 +27,6 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -66,6 +65,7 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
+      <version>${log4j.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -125,9 +125,6 @@
           <name>native</name>
         </property>
       </activation>
-      <properties>
-        <native-image.disable-reports>true</native-image.disable-reports>
-      </properties>
       <build>
         <plugins>
           <plugin>
@@ -142,6 +139,7 @@
                 <configuration>
                   <enableHttpUrlHandler>true</enableHttpUrlHandler>
                   <additionalBuildArgs>-H:IncludeResources=.*/banner.txt</additionalBuildArgs>
+                  <enableReports>false</enableReports>
                 </configuration>
               </execution>
             </executions>
