--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <!-- Dependencies versions -->
-    <quarkus.version>0.22.0</quarkus.version>
+    <quarkus.version>0.26.1</quarkus.version>
     <jool.version>0.9.14</jool.version>
     <kubernetes-client.version>4.6.1</kubernetes-client.version>
     <immutables.version>2.7.5</immutables.version>
@@ -57,6 +57,7 @@
     <docker-junit-extension.version>1.2.8</docker-junit-extension.version>
     <jersey.version>2.29</jersey.version>
     <mockito.version>3.0.0</mockito.version>
+    <log4j.version>2.11.2</log4j.version>
     <!-- Plugins versions -->
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <jar-plugin.version>3.1.2</jar-plugin.version>
