feat: postgres configuration cannot be deleted if a cluster depends on it

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/validation-webhook-configuration.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/validation-webhook-configuration.yaml
@@ -33,7 +33,7 @@ webhooks:
   - name: pgconfig.{{ .Values.operatorName }}.{{ .Values.operatorNamespace }}
     sideEffects: None
     rules:
-      - operations: ["CREATE", "UPDATE"]
+      - operations: ["CREATE", "UPDATE", "DELETE"]
         apiGroups: ["stackgres.io"]
         apiVersions: ["*"]
         resources: ["sgpgconfigs"]
